<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnSetting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"
        android:title="@string/setting" />

    <item
        android:id="@+id/btnMap"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="always"
        android:title="@string/maps" />

</menu>